
Slick 7.x-2.0-dev, 2015-6-1
---------------------------
- Moved slick_inline_css_skins() to slick_fields_inline_css_skins(), since it is
  only specific to fields, not views.
- Revived the "slick" class when it is "unslick" (a slideshow with a single
  slide/image -- i.e. when a content editor can not meet design specs), to get
  consistent CSS global styling. JS filters out the unslick instead.
- Moved specific backend-related functions to slick.admin.inc:
  o slick_get_responsive_options()
  o slick_clean_options()
  o slick_get_overridable_options()
- Moved specific theme-related functions to slick.theme.inc.

- #2497945 by gausarts: Move type juggling to backend only
  A slick_update_7007() is provided, but not effective for stored codes.

  Please re-save and re-export optionsets if you are a pre-alpha user who stored
  optionsets in codes before alpha release on 2015-3-31, or precisely before
  2015-3-2 commit: http://cgit.drupalcode.org/slick/commit/?id=f08c3b4

  Please ignore if you:
  o are a (pre-)alpha user who stored optionsets in codes after alpha.
  o never stored/exported optionsets in codes.
  Fixed single slide (unslick), and slick--float non-center slider, and a couple
  of cleanup.

Slick 7.x-2.0-dev, 2015-5-31
----------------------------
- #2497079: Move some sub-modules into separate projects
- Removed slick_devel and slick_example to go to: http://dgo.to/slick_extras
- Moved _slick_fields_get_media_thumbnail() to slick.extras.inc.

Slick 7.x-2.0-dev, 2015-5-30
----------------------------
- Added slick_update_7006() for a beta2 to avoid WSOD with slick_views removal.
- Removed libraries slick.easing, mousewheel, drupal.slick, and used one line JS
  array instead.
- Renamed libraries previously prefixed with "drupal" to be prefixed with
  "slick", e.g.: "drupal.slick.colorbox" to "slick.colorbox".

Slick 7.x-2.0-dev, 2015-5-29
----------------------------
- Removed slick_views, and moved it into http://dgo.to/slick_views